# glod

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
LICENSES/: PYPROJ_LICENSE
glod/: __init__.py  config.py  feature.py  featurecollection.py  geometry.py  test.py  utils.py
tests/: test_config.py  test_feature.py  test_featurecollection.py  test_geometry.py  test_utils.py
