[project]
name = "glod"
version = "0.1.0"
description = "Geometry, Low On Dependencies"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["glod"]

[project.optional-dependencies]
transforms = [
    "pyproj>=3.7.0"
]

[dependency-groups]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0"
]