[project]
name = "glod"
version = "0.1.0"
description = "geometry, low on dependencies"
requires-python = ">=3.12"
dependencies = []
readme = "README.md"

[project.urls]
Repository = "https://github.com/michaelreed-geo/glod/"
Issues = "https://github.com/michaelreed-geo/glod/issues"

[tool.setuptools]
packages = ["glod"]

[project.optional-dependencies]
transforms = [
    "pyproj>=3.7.0"
]

[dependency-groups]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0"
]